add message center

--- a/src/css/iuapfix.less
+++ b/src/css/iuapfix.less
@@ -3,8 +3,10 @@
 }
 .ncontent{
   margin-right: -1px;
+  background-color: transparent;
   .alist {
-    border-right: 1px solid @color-border;
+    //border-right: 1px solid @color-border;
+    background-color:#FFF;
     a {
       border-right: none;
     }
